--- a/a-house-divided.Rmd
+++ b/a-house-divided.Rmd
@@ -587,14 +587,14 @@ fig_3_df <- df_primaries %>%
 	mutate(year = as.numeric(as.character(year))) %>% 
 	ungroup() %>%
 	filter(primary_vote_simple != "Voted in Other Primary" & !is.na(primary_vote_simple)) %>%
-	mutate(prim_vote = as.factor(primary_vote_simple),
-				 prim_vote = recode(prim_vote,
-														"Didn't Vote" = "Non-voter")) %>% 
+	mutate(prim_vote = factor(recode(primary_vote_simple,
+														"Didn't Vote" = "Non-voter"),
+														levels = c("Winner", "Non-voter", "Loser"))) %>% 
 	glimpse() 
 
 
 ggplot(fig_3_df, aes(x = year, y = pct_50_below, color = pid_3)) +
-	facet_wrap(vars(primary_vote_simple)) +
+	facet_wrap(vars(prim_vote)) +
 #	 geom_linerange(aes(ymin = (pct_50_below - 1.96*se), ymax = (pct_50_below + 1.96*se)), position = dodge) +
   geom_line(aes(linetype = pid_3), size = 1, position = dodge) +
 
@@ -608,8 +608,8 @@ scale_color_manual(values = c("Republican" = "#481567FF",
  scale_shape_manual(values = c("Republican" = 15,
   															"Democrat" = 16)) +
 	scale_x_continuous(breaks = c(seq(2008, 2020, by = 4))) +
-	# scale_y_continuous(breaks = c(seq(0,25, by = 5)),
-										 # limits = c(0,25)) +
+	 scale_y_continuous(breaks = c(seq(0,25, by = 5)),
+										  limits = c(0,20)) +
 	theme(legend.position = 'bottom',
 				axis.text.x = element_text(angle = 0),
 				legend.key.width = unit(.1, "npc"),
