removed the old intro, will add it back piecemeal as needed

--- a/a-house-divided.Rmd
+++ b/a-house-divided.Rmd
@@ -236,26 +236,14 @@ party_fts_ns_joined <- left_join(party_fts_ns, boot_sd_in)%>%
 
 # Introduction
 
-It is well-documented that democratic accountability suffers under conditions of inter-party animus. What are the consequences when partisans harbor animosity towards their *own* party? @groenendyk2020 identify such cold partisans,  arguing that intra-party polarization is occurring along ideological lines as self-identified moderate Democrats and Republicans become less enthusiastic about their parties while their co-partisans on the left and right respectively grow more favorable towards the party. It is difficult to square the ideological polarization proposed by @groenendyk2020 with the qualitative features of the visible power struggle within the parties. I propose a supplementary explanation: that intra-party contests, particularly primary elections, complicate the in-party/in-group dynamic. Ultimately, weakening the in-party affinity and increasing the political disdain felt by those who find themselves on the losing side of these contests.
-
-Journalism and scholarship have been rife with accounts of the animosity exhibited by the activists and elected officials on the Democratic Party's left towards the more centrist mainline of the party [@azari2017; @thompson2020]. @masket2020 details lingering animosity between supporters and staffers for the 2016 campaigns of Bernie Sanders and Hillary Clinton (as well as a disdain for individuals associated with the Sanders campaign expressed by former Martin O'Malley organizers). In the Republican camp distinctions between "insurgents" and the "mainline" are not as clear, given that the insurgent candidate, Donald Trump, claimed victory in 2016. However, supporters of the 2016 Sanders and Trump candidacies were motivated largely by a distrust in government, not by commitment to a positive ideological program  [@dyck2018]. 
-
-Symbolic values and ideological identifiers have little relationship to individuals' actually held political beliefs [@zaller1992; @mcclosky1984; @ahler2018; @ahler2015; @mason2018]. While ideological identifiers  like "liberal" and "conservative" may be salient to individuals as *identities*, individuals have little idea of what views are typical of a party or ideology and which are heterodox. Partisans' self identification as "moderate" or "extreme" may well inform their disposition towards their party but there is no guarantee that those individuals would recognize those who identify as their "co-ideologues" as such, or even be correct in placing their own views on an ideological spectrum [@converse1964; @kalmoe2020a]. Thus, characterization of partisan groups as internally polarized on the basis of ideology is conceptually fraught given the quality of evidence available [@fiorina2005; @fiorina2012; @ahler2018; @iyengar2012; @iyengar2018].
-
-I argue that ideology alone is insufficient to understand intra-party affect. Rather, I argue that intra-party electoral competition is itself a driver of intra-party affective divisions. In this paper, I draw on cross-sectional data from the American National Elections Study (ANES) and an original survey experiment. I demonstrate that, while cold partisans are less likely to support their own party's candidates they are not disengaged from politics. Rather, cold partisans *are* more skeptical of government, more pessimistic about democracy, and more likely to support third party candidates. 
 
 
-## Intra-party Competition
-
-
-In the wake of her 2008 primary loss to Barack Obama, supporters of Democratic standard-bearer Hillary Clinton vocally rejected the election's results, pledging to throw support behind Republican nominee John McCain and spawning the "Party Unity My Ass" movement^[https://www.washingtonpost.com/wp-dyn/content/article/2008/06/26/AR2008062604162.html?tid=a_inl_manual] (it is difficult to say how many PUMAs followed through with their pledge). In a Salon article published in June of 2008^[https://www.salon.com/2008/06/23/pumas/], Rebecca Traister ties the PUMAs' anger to (among other things) the closeness of the election, perceived mistreatment by the media and DNC chair Howard Dean, and resentment at being made to feel like outsiders in their own party, saying: 
+It is well-documented that democratic accountability suffers under conditions of inter-party animus. What are the consequences when partisans harbor animosity towards their *own* party? In the wake of her 2008 primary loss to Barack Obama, supporters of Democratic standard-bearer Hillary Clinton vocally rejected the election's results, pledging to throw support behind Republican nominee John McCain and spawning the "Party Unity My Ass" movement^[https://www.washingtonpost.com/wp-dyn/content/article/2008/06/26/AR2008062604162.html?tid=a_inl_manual] (it is difficult to say how many PUMAs followed through with their pledge). In a Salon article published in June of 2008^[https://www.salon.com/2008/06/23/pumas/], Rebecca Traister ties the PUMAs' anger to (among other things) the closeness of the election, perceived mistreatment by the media and DNC chair Howard Dean, and resentment at being made to feel like outsiders in their own party, saying: 
 
 >"They are mad at their party and its leaders because they feel this race has opened up a door, allowing people to rag on white women...in a way that demonstrates that women have a questionable place in liberalism and progressivism. Since when is the party supposedly interested in social justice not interested in the advancement of women to the highest office?"
 
-
 Clinton supporters' posture towards their party in 2016 bore little resemblance to that of the '08 race. Bernie Sanders---a former independent and self-identified socialist---leaned into the role of an insurgent, anti-establishment candidate. Sanders predicated his campaign on a conflict between the working-class Democratic base and the elites of both major parties. Following Sanders's loss his supporters, angry with the DNC and reluctant to support Clinton in November led a loosely organized movement of Democratic party discontents to found groups like *Justice Democrats* and expand membership of organizations like the *Democratic Socialists of America* and various state and local progressive caucuses to protest perceived slights by the party establishment and support further left and anti-establishment down-ballot candidates while the Clinton campaign and DNC attempted to entice their spurned co-partisans back to the fold through campaign promises and adjustments to the party platform [@seitz-wald2016]. 
 
-That Sanders supporters would be antagonistic towards the Democratic Party is not surprising on its own. Sanders campaigned against the party establishment---it is not a stretch that he would attract those disillusioned or unhappy with the party. The story is more complicated. Republican supporters of Donald Trump---whose campaign was even more exuberant in its hostility towards the Republican party establishment than Sanders's was toward the Democrats---were more enthusiastic about their party than any other 2016 candidate's supporters, despite the mutual hostility between Trump and established Republican elites. As is discussed later, in Figure 5, supporters of winning candidates tend to be warmer towards their own party than are losers---there is little difference in distributions of out-party affect. 
 
 Primary elections are complex information environments. Not only do primaries often see many more viable candidates compete against one another than do in the general, but the efficient heuristic of partisanship is of little use to voters in distinguishing between the slew of co-partisan candidates. These features of primary elections invite a useful analogy to multi-party systems. In multi-party systems, as in multi-*candidate* primary elections, the electoral spectrum is (almost by tautology) multi-dimensional, not polar as in The United States general election context. Given the primacy of negative partisanship---a dislike for the out-party---in shaping political identity [@iyengar2018], we might expect voters in multi-party contexts to behave as instrumental partisans, supporting parties and candidates as means to programmatic ends [@bankert2017]. Yet evidence for instrumental voting is scant, with multi-party voters exhibiting similar levels of expressive, identity-based partisanship as those in the United States [@adams2011; @bankert2017]. Across electoral environments, factors of identity are central to voters' decisionmaking processes and self-perception.
 
@@ -265,15 +253,9 @@ Vote choice---or preference for a candidate more generally---is most often analy
 
 
 
-# Data and Methods
+# Observational Data
 
 In arguing that primary elections decrease partisanship I draw on several datasets. First, my main measure of partisan affect is taken from the American National Election Study's (ANES) 100-point partisan feeling thermometers. Feeling thermometer questions ask respondents to rate groups on a scale from 0-100, where 0 indicates that a respondent dislikes and feels very "cold" towards the group and 100 indicates that the respondent likes and feels very "warm" towards the group. A rating of 50 degrees indicates total indifferernce towards the group. I analyze the time-series trends in this measure as taken from the ANES Cumulative Data File (ANES-CDF) as well as in the individual years---2008, 2012, 2016, and 2020 specifically. I also draw on a range of ANES items which solicit the attitudes and behaviors of the respondent towards the government and politics. These measures are discussed in more detail in the following section. All calculations are made and figures drawn using the weighting procedures specified in the ANES codebooks.
-
-To gain causal leverage over the question of primary election outcomes and partisans' affect, an original survey experiment is conducted, randomly assigning a primary election outcome ("Win" or "Loss") to a counterfactual congressional primary election. The survey was programmed using the Qualtrics survey platform and participants were recruited using Amazon's *Mechanical Turk* (Mturk) platform. The quality of data produced by Mturk-recruited samples has been the subject of substantial debate, with Mturk skeptics pointing to the lack of control afforded by the Mturk environment to the researcher and the low-stakes nature of the quick tasks workers are asked to perform [@searles2015]. 
-
-Mturk samples are indeed noisier than samples obtained through more traditional methods [@johnson2020] and the population of Mturk workers is not a representative slice of the broader U.S. population [@ahler; @goodman2013]. These drawbacks make Mturk ill-suited for studies which aim to estimate the level of a parameter or quantity present in a population [@horton2011]. Fortunately, Mturk samples are much better suited to detecting *changes* in quantities. The increased noise in the Mturk sample works against statistical significance [@goodman2013] reducing the likelihood of a type-1 errors. Further, Mturk workers tend to perform *better* than other subject populations on attentiveness checks and consistently report their true preferences, provided that doing so does not jeopardize their payout [@hauser2016; @johnson2020]. As the purpose of this experiment is to interrogate shifts in partisans' affect and opinions agnostic to the absolute values of these attitudes, Mturk is an appropriate platform with which to recruit participants.
-
-Preference falsification by participants is also not of great concern as participants were not restricted from the survey on any basis other than location of their IP address (which must be based in the United States), thus there was no financial incentive to falsify preferences. Mturk workers *are* known to falsify their IP addresses [@ahler] in order to gain access to more and higher-paying tasks, as such it is quite likely that some responses in the study were gathered from participants outside the United States who likely do not have genuine preferences about U.S. political parties. Responses of this type can artificially inflate the variation in the sample, but there is no reason to think that the sample is systematically *biased* by these responses.
 
 
 # Descriptive Analysis
@@ -860,7 +842,12 @@ ggplot(m_df, aes(x = therm_inparty)) +
 
 ## Survey Experiment
 
-To address the problem of observational equivalence inherent to time series cross sectional data, I conduct an original survey experiment using Amazon's Mechanical Turk (Mturk) platform, manipulating the outcome of counterfactual congressional primary elections.
+To address the problem of observational equivalence inherent to time series cross sectional data, I conduct an original survey experiment using Amazon's Mechanical Turk (Mturk) platform, manipulating the outcome of counterfactual congressional primary elections. The survey was programmed using the Qualtrics survey platform and participants were recruited using Amazon's *Mechanical Turk* (Mturk) platform. The quality of data produced by Mturk-recruited samples has been the subject of substantial debate, with Mturk skeptics pointing to the lack of control afforded by the Mturk environment to the researcher and the low-stakes nature of the quick tasks workers are asked to perform [@searles2015]. 
+
+Mturk samples are indeed noisier than samples obtained through more traditional methods [@johnson2020] and the population of Mturk workers is not a representative slice of the broader U.S. population [@ahler; @goodman2013]. These drawbacks make Mturk ill-suited for studies which aim to estimate the level of a parameter or quantity present in a population [@horton2011]. Fortunately, Mturk samples are much better suited to detecting *changes* in quantities. The increased noise in the Mturk sample works against statistical significance [@goodman2013] reducing the likelihood of a type-1 errors. Further, Mturk workers tend to perform *better* than other subject populations on attentiveness checks and consistently report their true preferences, provided that doing so does not jeopardize their payout [@hauser2016; @johnson2020]. As the purpose of this experiment is to interrogate shifts in partisans' affect and opinions agnostic to the absolute values of these attitudes, Mturk is an appropriate platform with which to recruit participants.
+
+Preference falsification by participants is also not of great concern as participants were not restricted from the survey on any basis other than location of their IP address (which must be based in the United States), thus there was no financial incentive to falsify preferences. Mturk workers *are* known to falsify their IP addresses [@ahler] in order to gain access to more and higher-paying tasks, as such it is quite likely that some responses in the study were gathered from participants outside the United States who likely do not have genuine preferences about U.S. political parties. Responses of this type can artificially inflate the variation in the sample, but there is no reason to think that the sample is systematically *biased* by these responses.
+
 
 
 ## Survey Structure
@@ -1561,5 +1548,17 @@ Referring to Figure 4, the flat slope of Democratic and Republican lines in the 
 
 The greater increase in strong partisanship among winning Democrats suggests that Obama supporters' affinity for their own party increased as a result of his primary victory. There is no such effect observed among Republicans, who become less likely to identify as strong partisans regardless of which candidate they supported in the primary. It is difficult to assess why this might be, given that data from only one election cycle is available. Perhaps Republicans' grim electoral prospects implied by the underwater approval of the Bush Administration, unpopular wars in Iraq and Afghanistan, and economic anxiety suppressed any partisan enthusiasm felt by supporters of John McCain's primary bid. It is also possible that as the Republican Party electoral coalition is more ideological than the Democrats' coalition rooted in group interest [@grossmann2016] primary outcomes affect Republicans' and Democrats' partisanship in different ways, though there is little else in my analyses that support such a conclusion.
 
+# Old Intro
+
+It is well-documented that democratic accountability suffers under conditions of inter-party animus. What are the consequences when partisans harbor animosity towards their *own* party? @groenendyk2020 identify such cold partisans,  arguing that intra-party polarization is occurring along ideological lines as self-identified moderate Democrats and Republicans become less enthusiastic about their parties while their co-partisans on the left and right respectively grow more favorable towards the party. It is difficult to square the ideological polarization proposed by @groenendyk2020 with the qualitative features of the visible power struggle within the parties. I propose a supplementary explanation: that intra-party contests, particularly primary elections, complicate the in-party/in-group dynamic. Ultimately, weakening the in-party affinity and increasing the political disdain felt by those who find themselves on the losing side of these contests.
+
+Journalism and scholarship have been rife with accounts of the animosity exhibited by the activists and elected officials on the Democratic Party's left towards the more centrist mainline of the party [@azari2017; @thompson2020]. @masket2020 details lingering animosity between supporters and staffers for the 2016 campaigns of Bernie Sanders and Hillary Clinton (as well as a disdain for individuals associated with the Sanders campaign expressed by former Martin O'Malley organizers). In the Republican camp distinctions between "insurgents" and the "mainline" are not as clear, given that the insurgent candidate, Donald Trump, claimed victory in 2016. However, supporters of the 2016 Sanders and Trump candidacies were motivated largely by a distrust in government, not by commitment to a positive ideological program  [@dyck2018]. 
+
+Symbolic values and ideological identifiers have little relationship to individuals' actually held political beliefs [@zaller1992; @mcclosky1984; @ahler2018; @ahler2015; @mason2018]. While ideological identifiers  like "liberal" and "conservative" may be salient to individuals as *identities*, individuals have little idea of what views are typical of a party or ideology and which are heterodox. Partisans' self identification as "moderate" or "extreme" may well inform their disposition towards their party but there is no guarantee that those individuals would recognize those who identify as their "co-ideologues" as such, or even be correct in placing their own views on an ideological spectrum [@converse1964; @kalmoe2020a]. Thus, characterization of partisan groups as internally polarized on the basis of ideology is conceptually fraught given the quality of evidence available [@fiorina2005; @fiorina2012; @ahler2018; @iyengar2012; @iyengar2018].
+
+I argue that ideology alone is insufficient to understand intra-party affect. Rather, I argue that intra-party electoral competition is itself a driver of intra-party affective divisions. In this paper, I draw on cross-sectional data from the American National Elections Study (ANES) and an original survey experiment. I demonstrate that, while cold partisans are less likely to support their own party's candidates they are not disengaged from politics. Rather, cold partisans *are* more skeptical of government, more pessimistic about democracy, and more likely to support third party candidates. 
+
+
+That Sanders supporters would be antagonistic towards the Democratic Party is not surprising on its own. Sanders campaigned against the party establishment---it is not a stretch that he would attract those disillusioned or unhappy with the party. The story is more complicated. Republican supporters of Donald Trump---whose campaign was even more exuberant in its hostility towards the Republican party establishment than Sanders's was toward the Democrats---were more enthusiastic about their party than any other 2016 candidate's supporters, despite the mutual hostility between Trump and established Republican elites. As is discussed later, in Figure 5, supporters of winning candidates tend to be warmer towards their own party than are losers---there is little difference in distributions of out-party affect. 
 
 \clearpage
